@@ -3,4 +3,4 @@
 The following is a list of planned expansions for HighLine, in no particular
 order.
 
-* Add an easy-access help system for menus.
+* This space for rent...
